# coarse-grain-rxns

./: .gitattributes  .gitignore  README.md  TEMPLATE_FILEPATHS.yaml  pyproject.toml  tracker.sh
artifacts/: 250109_outline_subgroup_presentation.docx
cgr/: cheminfo.py  draw.py  filepaths.py  inference.py  template.py
configs/: add_coreactant_roles.yaml  calc_expansion_metrics.yaml  collect_frequent_subgraphs.yaml  expand.yaml  extract_inferred.yaml  extract_mechanistic.yaml  extract_rdchiral.yaml  extract_reaction_templates.yaml  filepaths.yaml  hpo.yaml  infer_mech_labels.yaml  infer_mech_subgraphs.yaml  mcsa_pull.yaml  standardize_coreactants.yaml  test_stereo_template_extraction.yaml  train.yaml  train_production.yaml  write_freqinformed_rules.yaml  write_mechinferred_rules.yaml  write_rcr_rules.yaml
notebooks/: analyze_mcsa_labeled_mechanisms.ipynb  compare_featurizers_similarities.ipynb  decarb.ipynb  downsample_known_compounds.ipynb  ecfp_loc_ensemble.ipynb  ecfp_w_loc.ipynb  examine_low_feas_mechinformed.ipynb  examine_split_mol_rules.ipynb  examine_templates.ipynb  example-study.db  explore_calib.ipynb  explore_stereo.ipynb  extract_mechanistic_subgraphs.ipynb  extract_mechanistic_subgraphs_recap.ipynb  frag_by_aidxs.ipynb  gen_rxns_venn_diagrams.ipynb  init_chemprop_mech.ipynb  initial_analysis_decarbs.ipynb  mech_classification_performance.ipynb  min_rules_expl.ipynb  plot_mech_inf_xref.ipynb  process_coreactants.ipynb  protoype_stereo_and_radii.ipynb  rule_generative_performance.ipynb  rules_generative_performance.ipynb  test_rdchiral.ipynb  tmp.ipynb  (+3 more)
(+3612 files in other folders)
