[tool.poetry]
name = "cgr"
version = "0.1.0"
description = ""
authors = [
    "Yash Chainani <yash.chainani@northwestern.edu>",
    "Stefan Pate <stefanpate94@gmail.com>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2024.3.6"
networkx = "^3.4.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
hydra-core = "^1.3.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
omegaconf = "^2.3.0"
scipy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
